--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
     "autoprefixer": "10.4.14",
     "daisyui": "^2.51.5",
     "ethers": "^5",
+    "i18next": "^22.4.15",
+    "i18next-browser-languagedetector": "^7.0.1",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "video-react": "^0.16.0"
+  },
+  "devDependencies": {
+    "@types/video-react": "^0.15.1"
   }
 }
